# gd25-biz-im-python

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  脚手架CookieCutter验证报告.md
alembic/: README.md  env.py
alembic/versions/: .gitkeep  20251210_1554_25c8f48abee5_create_initial_tables.py
app/: config.py  dependencies.py  main.py
app/api/: __init__.py  group.py  message.py  user.py  users.py
app/db/: __init__.py  base.py  database.py  session.py
app/models/: __init__.py  ai_chat_record.py  ai_interaction_record.py  group.py  group_member.py  message.py  user.py
app/repositories/: __init__.py  base.py  group_member_repository.py  group_repository.py  message_repository.py  user_repository.py
app/schemas/: __init__.py  group.py  message.py  user.py
app/services/: __init__.py  user_service.py
app/tasks/: __init__.py  base.py  celery_app.py  examples.py
app/utils/: __init__.py  exceptions.py  id_generator.py  logger.py  response.py
app/websocket/: __init__.py  handler.py  im_handler.py  manager.py
cursor_docs/: alembic使用指南.md  route_index.md  切换数据库操作指南.md
cursor_test/: test_ai_config.py  test_milestone2.py
im开发文档/: 01-项目总体设计.md  04-开发计划.md  README.md
im开发文档/im与ai分离探讨/: 设计问题分析报告.md
im开发文档/v0.1/: 01-项目总体设计.md  02-模块详细设计.md  03-API接口文档.md  README.md  (+2 more)
scripts/: check_alembic_status.py  check_docker_dependencies.sh  generate_route_index.py  init_db.py  verify_tables.py
tests/: conftest.py  test_celery.py  test_config.py  test_database.py  test_dependencies.py  test_main.py  test_repository.py  test_utils.py  test_websocket.py  websocket_test.html
(+10 files in other folders)
